--- a/src/app/modules/work/components/construction-portal/construction-portal.component.scss
+++ b/src/app/modules/work/components/construction-portal/construction-portal.component.scss
@@ -2,24 +2,29 @@
 @import '~bootstrap/scss/variables';
 @import '~bootstrap/scss/mixins';
 h2{
-    font-size: 56px;
+    font-size: 57px;
+    font-family: Baskerville;
+    color: #000000;
     @include media-breakpoint-down(md) {
         font-size: 36px;
     }
 }
 p{
-    font-size: 16px;
-    line-height: 30px;
+    font-size: 18px;
+    font-family: Muli;
+    color: #000000;
     @include media-breakpoint-down(md) {
         font-size: 14px;
     }
 }
 h6{
-    font-size: 36px;
+    font-size: 24px;
+    font-family: Muli;
+    color: #000000;
     @include media-breakpoint-down(md) {
         font-size: 28px;
     }
-} 
+}  
     .banner{
         background-color: #DDFAFF;
         position: relative;
@@ -47,6 +52,7 @@ h6{
         background-color: #FCFCFC;
         padding: 200px 0px;
         .row{
+            padding-bottom: 50px;
             margin-right: 0;
             margin-left: 0;
         }
@@ -71,105 +77,136 @@ h6{
             }  
         }
     }
-    .approach{
-        background-color: #3C3C3C;
-        color: #FCFCFC;
-        padding: 200px 0px;
-        h2{
-            margin-bottom: 30px;
-        }
-        // p{
-        //     line-height: 40px;
-        // }
-        @include media-breakpoint-down(lg){
-            padding: 200px 0px;
-        }
-        @include media-breakpoint-down(md){
-            padding: 150px 0px;
-        }
-        @include media-breakpoint-down(sm){
-            padding: 80px 0px;
-            h2{
-                font-size: 36px;
-                margin-bottom: 30px;
-            }
-            // p{
-            //     font-size: 24px;
-            //     line-height: 40px;
-            // }
-        }
-    }
     .target-strategy{
         background-color: #FCFCFC;
         color: #3D3D3D;
         padding: 150px 0px;
-        .strategy{
-            margin-top: 30px;
+        h6{
+            font-size: 26px;
+            font-family: Baskerville;
+            padding-top: 30px;
+        }
+        p{
+             font-size: 18px;
+            font-family: Muli;
+            line-height: 40px;
         }
         @include media-breakpoint-down(sm){
             padding: 80px 0px;
         }
     }
     .needs-challenges{
-        //margin-bottom: 70px;
-        //padding: 50px 0px;
-        .left{
-            background-color: #DDFAFF;
-            padding: 50px 0px;
+        background-color: #EBEBEB;
+        padding: 50px 0px;
+        h2{
+            font-size: 80px;
+            font-family: Baskerville;
+            color: #C3343C;
+            font-weight: 300;
+            padding-top: 50%;
         }
-        .right{
-            background-color: #003F72;
+        h6{
+            margin-bottom: 25px;
+            font-family: Baskerville;
+            font-size: 36px;
+        }
+        p{
+            font-weight: 300;
+             font-size: 18px;
+            font-family: Muli;
         }
         .needs{
             height: 500px;
-            color: #FCFCFC;
             overflow: auto;
         }
         ::-webkit-scrollbar {
             width: 0px;
         }
         .needs-right{
-            padding: 150px 30px 100px 30px;
+            padding: 50px 30px;
         }
-        h2{
-            color: #003F72;
-            font-weight: 300;
-            margin-top: 50px;
+        @include media-breakpoint-down(lg){
+            padding: 50px 0px;
+            h1{
+                font-size: 100px;
+            }
         }
-        h6{
-            margin-bottom: 25px;
-        }
-        p{
-            font-weight: 300;
-        }
-        // @include media-breakpoint-down(lg){
-        //     padding: 50px 0px;
-        // }
         @include media-breakpoint-down(md){
-            // padding: 50px 0px;
+            padding: 50px 0px;
             h1{
                 font-size: 72px; 
             }
             h2{
                 font-size: 36px;
-                padding-left: 20px;
             }
         }
         @include media-breakpoint-down(sm){
-            // padding: 0px 0px;
-            .left{
-                background-color: #003F72;
-                padding: 50px 0px 0 0;
-            }
-            h2{
-                color: #FFF;
-            }
+            padding: 0px 0px;
             .needs{
-                height: 700px;
+                height: 930px;
                 overflow: hidden;
             }
             .needs-right{
-                padding: 50px 0 0 0;
+                padding: 10px 0 0 0;
+            }
+        }
+    }
+    .research{
+        padding: 80px 0px;
+        color: #3D3D3D;
+        h6{
+            line-height: 55px;
+            font-family: Baskerville;
+            font-size: 36px;
+        }
+        p{
+            font-family: Muli;
+             font-size: 18px;
+            line-height: 40px;
+        }
+        @include media-breakpoint-down(lg){
+            padding: 80px 0px;
+        }
+        @include media-breakpoint-down(md){
+            padding: 80px 0px;
+            h6{
+               font-size: 28px;
+               line-height: 43px;
+            }
+        }
+        @include media-breakpoint-down(sm){
+            padding: 80px 0px;
+        }
+    }
+    .craft{
+        background-color: #C3343C;
+        padding-top: 40px;
+        padding-bottom: 40px;
+        h2{
+            font-size: 57px;
+            font-family: Baskerville;
+            color: #FCFCFC;
+        }
+        .button{
+            margin-top: 80px;
+        }
+        .btn-white{
+            border: 2px solid #FFFFFF;
+            color: #FCFCFC;
+             font-size: 18px;
+            padding: 8px;
+            border-radius: 0px;
+            font-family: Muli;
+        }
+        @include media-breakpoint-down(md){
+            h2{
+                font-size: 37px;
+            }
+        }
+        @include media-breakpoint-down(sm){
+            .button{
+                margin-top: 50px;
+               padding-left: 15px;
             }
         }
     }
@@ -219,25 +256,27 @@ h6{
         }
        .left{
            padding: 40px 130px 80px 90px;
-           background-color: #C3343C;
+           background-color: #EBEBEB;
            h2{
-               font-size: 36px;
-               font-weight: 400;
-               color: #FFF;
-               margin-top: 120px;
-               margin-bottom: 80px;
-           }
-           .btn{
-               background-color: #FFF;
-               border-radius: 0;
-               color: #C3343C;
-               cursor: pointer;
-               font-size: 20px;
-               font-weight: 400;
-                img{
-                    padding-left: 12px;
-                }
-           }
+            font-size: 57px;
+            font-family: Baskerville;
+            color: #282829;
+            margin-top: 120px;
+            margin-bottom: 80px;
+        }
+        .btnn{
+            border: 2px solid #0D0D0D;
+            border-radius: 0;
+            color: #0D0D0D;
+            cursor: pointer;
+            font-size: 20px;
+            font-family: Muli;
+            &:hover{
+                background-color: #C3343C;
+                color: #FFFFFF;
+                border: 2px solid #E2E2E2;
+            }
+        }
            @include media-breakpoint-down(md){
             padding: 100px 40px 80px 30px;
             h2{
@@ -261,15 +300,15 @@ h6{
                    }
                }
                h3{
-                   font-size: 36px;
-                   font-weight: 500;
-                   margin: 40px 130px 20px 40px;
-               }
-               h4{
-                   font-size: 16px;
-                   font-weight: 400;
-                   margin: 0 0 10px 40px;
-               }
+                font-size: 36px;
+                font-family: Baskerville;
+                margin: 40px 130px 20px 40px;
+            }
+            h4{
+             font-family: Muli;
+             font-size: 20px;
+                margin: 0 0 10px 40px;
+            }
            }
            @include media-breakpoint-down(md){
             .class{
