--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,30 @@
+<header>
+    <div class="container">
+        <nav class="navbar navbar-expand">
+            <a class="navbar-brand" href="#">uxmint design</a>
+            <div class="collapse navbar-collapse">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Work</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Let's Talk</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link menu-activator" (click)="openMenu()"><img src="https://img.icons8.com/ios-filled/50/3B3B3B/menu--v1.png"/></a>
+                </li>
+              </ul>
+            </div>
+        </nav>
+    </div>
+</header>
+
 <router-outlet></router-outlet>
 <!--Footer-->
 <footer>
