--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,35 @@
 @import '~bootstrap/scss/functions';
 @import '~bootstrap/scss/variables';
 @import '~bootstrap/scss/mixins';
-
+.navbar-brand{
+    color: #C3343C;
+    font-weight: 600;
+    font-size: 22px;
+}
+.nav-item{
+    margin-left: 22px;
+}
+.nav-link{
+    color: #3B3B3B;
+    font-weight: 600;
+}
+.menu-activator{
+    cursor: pointer;
+    position: relative;
+    margin-left: 30px;
+    img{
+        height: 20px;
+        width: auto;
+    }
+    &::before{
+        content: '';
+        border-left: 1px solid #AAA;
+        position: absolute;
+        height: 20px;
+        margin-left: -35px;
+        top: 11px;
+    }
+}
 footer{
     background-color: #282829;
     color: #FFFFFF;
